# IgnisEngine

./: .gitignore  CMakeLists.txt  CMakeListsMono.txt  CMakeUserPresets2.json  FindMono.cmake  IgnisEngine.sln  README  build_and_run.bash  imgui.ini  monoTest.c  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  mono_crash.0.8.json  mono_crash.0.9.json  mono_crash.364492.0.json  mono_crash.364492.1.json  scriptRunner.cpp  scriptRunner.h  test  vcpkg-configuration2.json  vcpkg.json
IgnisEngine/: IgnisEngine.sln  IgnisEngine.vcxproj  IgnisEngine.vcxproj.filters  imgui.ini
IgnisEngine/IgnisEngine/: IgnisEngine.vcxproj  main.cpp
IgnisEngine/assets/: savedScene.scene
IgnisEngine/assets/shaders/: basic_shader.fs  debug_line_shader.fs  debug_line_shader.shader  debug_line_shader.vs  debug_tri_shader.shader  debug_tri_shader.vs  lit_shader.shader  lit_shader.vs
IgnisEngine/libs-compiled/vulkan/: InstallationLog.txt  components.xml  maintenancetool.ini
IgnisEngine/libs-compiled/vulkan/installerResources/com.lunarg.vulkan.core/: 1.3.296.0core.txt
IgnisEngine/libs/stb_image/: stb_image.cpp
IgnisEngine/src/: main.cpp
IgnisEngine/src/engine/: animationClip.h  animationController.cpp  animationController.h  animatorComponent.h  asset.h  assetManager.cpp  assetManager.h  cameraComponent.cpp  cameraComponent.h  component.cpp  component.h  firstPersonController.cpp  firstPersonController.h  gameObject.cpp  ignisEngineLoop.h  inputHandler.cpp  inputHandler.h  material.h  mesh.cpp  mesh.h  meshRenderer.cpp  model.cpp  model.h  quat.h  renderTexture.cpp  renderTexture.h  rigidBodyComponent.cpp  scene.h  serialization.h  serializationHelper.cpp  texture.cpp  texture.h  vec2.cpp  vec2.h  vec3.cpp
IgnisEngine/src/gui/: guiFileSystem.h  guiHierarchy.h  guiInspector.h  guiSceneView.h  ignisEngineGui.h
IgnisEngine/src/physics/: physicsContext.cpp  physicsDebugRenderer.cpp
IgnisEngine/src/util/: randomNumberGenerator.h
IgnisEngine/src/visual/: GLContext.cpp  GLContext.h  SDLContext.cpp  SDLContext.h  dearImGuiContext.cpp  dearImGuiContext.h  graphicsContext.cpp  graphicsContext.h  shaderSource.h  windowContext.cpp  windowContext.h
assets/: backpack.mtl  basic_shader.vs  savedScene.scene  scene.scene  sprite_shader.fs  sprite_shader.shader  sprite_shader.vs
assets/models/: plane.glb
assets/shaders/: basic_shader.fs  basic_shader.shader  basic_shader.vs  debug_line_shader.fs  debug_tri_shader.fs  lit_shader.fs  lit_shader.vs
libraries/MacOS/Mono.framework/: Commands  Headers  Home  Libraries  Mono
libraries/MacOS/Mono.framework/Versions/: Current
libraries/MacOS/Mono.framework/Versions/6.12.0/: VERSION  updateinfo
libraries/MacOS/Mono.framework/Versions/6.12.0/Commands/: ClassInitGenerator  IronRuby.Tests  al  al2  aprofutil  asp-state  asp-state2  asp-state4  caspol  cccheck  ccrewrite  cert-sync  cert2spc  certmgr  chktrust  csc  csharp  csi  dbsessmgr  dbsessmgr2  dbsessmgr4  disco  dmcs  dtd2rng  dtd2xsd  fastcgi-mono-server  fastcgi-mono-server2  fastcgi-mono-server4  fsharpc  fsharpi  gacutil  gacutil2  gapi2-codegen  gapi2-fixup  gapi2-parser  genxs  httpcfg  ikdasm  ilasm  illinkanalyzer  (+81 more)
libraries/MacOS/Mono.framework/Versions/6.12.0/lib/: libMonoPosixHelper.dylib  libMonoPosixHelper.la  libMonoSupportW.dylib  libMonoSupportW.la  libatk-1.0.0.dylib  libatk-1.0.la  libatksharpglue-2.la  libcairo-script-interpreter.2.dylib  libcairo-script-interpreter.la  libcairo.2.dylib  libcairo.la  libcroco-0.6.3.dylib  libcroco-0.6.la  libexpat.1.6.7.dylib  libexpat.la  libffi.6.dylib  libffi.la  libfontconfig.1.dylib  libfontconfig.la  libfpm_helper.la  libfreetype.6.dylib  libfreetype.la  libgailutil.18.dylib  libgailutil.la  libgdiplus.la  libgdk-quartz-2.0.0.dylib  libgdk-quartz-2.0.la  libgdk_pixbuf-2.0.0.dylib  libgdk_pixbuf-2.0.la  libgdksharpglue-2.la  libgettextlib.la  (+66 more)
libraries/MacOS/glad/include/glad/: glad.h
libraries/MacOS/glad/src/: glad.c
libraries/MacOS/glew/2.2.0_1/: INSTALL_RECEIPT.json
src/: CMakeLists.txt  main.cpp  monoTest.c  monoTest.cpp  test.cpp  test.cs  test.h
src/audio/: CMakeLists.txt  test2.cpp  test2.h
src/component/: CMakeLists.txt  component.h  objectTransform.h  serialization.h  transform.cpp  transform.h  vec3.cpp  vec3.h
src/engine/: CMakeLists.txt  animationClip.cpp  animationClip.h  animationController.h  animatorComponent.cpp  animatorComponent.h  asset.h  assetManager.cpp  assetManager.h  camera.cpp  camera.h  cameraComponent.cpp  cameraComponent.h  component.cpp  component.h  componentPy.cpp  componentPy.h  componentVisual.cpp  componentVisual.h  firstPersonController.cpp  firstPersonController.h  gameObject.cpp  gameObject.h  ignisEngineLoop.h  inputHandler.cpp  inputHandler.h  lightComponent.cpp  lightComponent.h  mat4.h  mesh.cpp  mesh.h  meshRenderer.cpp  meshRenderer.h  model.cpp  model.h  objectTransform.cpp  objectTransform.h  quat.cpp  quat.h  renderTexture.cpp  (+20 more)
src/gui/: CMakeLists.txt  engineGuiManager.h  guiHierarchy.h  guiInspector.h  guiSceneView.h  ignisEngineGui.h  imfilebrowser.h
src/input/: CMakeLists.txt  inputHandler.cpp  inputHandler.h
src/physics/: CMakeLists.txt  joltContext.cpp  joltContext.h  physicsContext.cpp  physicsContext.h  physicsDebugRenderer.cpp  physicsDebugRenderer.h  physicsEventListener.cpp  physicsEventListener.h
src/script/: emb.pyi  ignis.py
src/scripting-system/: CMakeLists.txt  moduleIgnis.h  pythonEngine.cpp  pythonEngine.h
src/scripting_system/: CMakeLists.txt  pythonEngine.h
src/shader/: vertex.vs
src/util/: CMakeLists.txt  timer.cpp  timer.h
src/visual/: CMakeLists.txt  GLContext.cpp  GLContext.h  SDLContext.cpp  SDLContext.h  context.cpp  context.h  dearImGuiContext.cpp  dearImGuiContext.h  gameObject.cpp  gameObject.h  geometry.cpp  geometry.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  window.cpp  window.h
src/window/: CMakeLists.txt
test.dSYM/Contents/Resources/DWARF/: test
(+179 files in other folders)
